ch1/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/r-medina/kbp-app:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1.0"
              memory: "1G"
            limits:
              cpu: "1.0"
              memory: "1G"
          volumeMounts:
            - name: passwd-volume
              readOnly: true
              mountPath: "etc/redis-passwd"
      imagePullSecrets:
        - name: pullsecret
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
---
