ch1/frontend/testing-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6-alpine
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: data
              mountPath: /data
            - name: script
              mountPath: /script/launch.sh
              subPath: launch.sh
            - name: passwd-volume
              mountPath: /etc/redis-passwd
          command: ["sh"]
          args: ["-c", "/script/launch.sh"]
      volumes:
        - name: script
          configMap:
            name: redis-config
            defaultMode: 077
        - name: passwd-volume
          secret:
            secretName: redis-passwd
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10G
